--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Home Page</title>
-  </head>
-  <body>
-<h1>Welcome to Sean's Code Dungeon</h1>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Home Page</title>
+  <link rel="stylesheet" href="css/master.css">
+</head>
+
+<body id="stars01">
+  <div class="container" id="div01">
+    <img src="img/torch8bit01.gif" id="torchleft">
+    <h1>Welcome to Sean's Code Dungeon</h1>
+    <img src="img/torch8bit01.gif" id="torchright">
+    <h2>Feel free to browse my site for cool math tricks</h2>
+  </div>
+
+  <!-- <img src="img/stars01.gif" id="stars02"> -->
+</body>
+
 </html>
