--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <div class="container" id="div01">
     <img src="img/torch8bit01.gif" id="torchleft">
     <h1>Welcome to Sean's Code Dungeon</h1>
-    <img src="img/torch8bit01.gif" id="torchright">
+    <img src="img/torch8bit01.gif" id="torchright"><br>
+    <img src="img/rotatingskull01.gif" id="rsleft" alt="">
     <h2>Feel free to browse my site for cool math tricks</h2>
+    <img src="img/rotatingskull01.gif" id="rsright" alt="">
   </div>
 
-  <!-- <img src="img/stars01.gif" id="stars02"> -->
 </body>
 
 </html>
