--- a/index.html
+++ b/index.html
@@ -1,90 +1,303 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <title>Sean's Code Dungeon</title>
-
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/master.css">
-</head>
-
-<body id="stars01">
-  <nav class="navbar navbar-default navbar-inverse">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header navbar-inverse">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">The Code Zone</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">My Projects</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Venture Downward <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Cool Math Games</a></li>
-              <li><a href="#">Secrets of the Occult My Dad Told Me</a></li>
-              <li><a href="#">Under Construction</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Pictures of My Cat</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Hello</a></li>
-            </ul>
-          </li>
-        </ul>
-        <form class="navbar-form navbar-left navbar-inverse">
-          <div class="form-group">
-
+  <head>
+    <meta charset="utf-8">
+    <title>Sean's Code Dungeon</title>
+    <!-- Latest compiled and minified CSS -->
+    <link a href="https://fonts.googleapis.com/css?family=Lato:400,700,300|Open+Sans:400,600,700,300" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/animate.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" href="../css/master.css">
+  </head>
+  <body id="stars01">
+    <!--header-->
+    <header class="main-header" id="header">
+      <div class="bg-color">
+        <!--nav-->
+        <nav class="nav navbar-default navbar-fixed-top">
+          <div class="container">
+            <div class="col-md-12">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynavbar" aria-expanded="false" aria-controls="navbar">
+                  <span class="fa fa-bars"></span>
+                </button>
+                <a href="index.html" class="navbar-brand">hello</a>
+              </div>
+              <div class="collapse navbar-collapse navbar-right" id="mynavbar">
+                <ul class="nav navbar-nav">
+                  <li class="active">
+                    <a href="#header">Top of Page</a>
+                  </li>
+                  <li>
+                    <a href="#feature">Why Hire Me</a>
+                  </li>
+                  <li>
+                    <a href="#contact">Contact</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
-        </form>
-        <ul class="nav navbar-nav navbar-right navbar-inverse">
-          <li><a href="#">Link</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
-        </ul>
+        </nav>
+        <!--/ nav-->
+        <div class="container text-center">
+          <div class="wrapper wow fadeInUp delay-02s">
+            <h2 class="top-title">welcome to</h2>
+            <h3 class="title">sean's website</h3>
+            <h4 class="sub-title">you deserve better. i'm sorry.</h4>
+            <a href="#contact" class="btn btn-submit">Contact Somebody Else</a>
+          </div>
+        </div>
       </div>
-      <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-  </nav>
+    </header>
+    <section id="feature" class="section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 wow fadeInLeft delay-01s">
+            <div class="section-title">
+              <h2 class="head-title">Why hire me?</h2>
+              <hr class="botm-line">
+              <p class="sec-para">If you turn your eyeballs to the right, these fancy texts will explain.</p>
+            </div>
+          </div>
+          <div class="col-md-9">
+            <div class="col-md-6 wow fadeInRight delay-01s">
+              <div class="icon">
+                <i class="fa fa-line-chart"></i>
+              </div>
+              <div class="icon-text">
+                <h3 class="txt-tl">I'll Grow Graph Numbers</h3>
+                <p class="txt-para">The good ones will get bigger and the bad ones will get smaller. Neat!
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 wow fadeInRight delay-01s">
+              <div class="icon">
+                <i class="fa fa-users"></i>
+              </div>
+              <div class="icon-text">
+                <h3 class="txt-tl">People Tell Me I'm Friendly</h3>
+                <p class="txt-para">I don't know much about sports but it doesn't stop me from nodding my head while smiling. Goooo baseketball!
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 wow fadeInRight delay-01s">
+              <div class="icon">
+                <i class="fa fa-pie-chart"></i>
+              </div>
+              <div class="icon-text">
+                <h3 class="txt-tl">I Explain Pretty Good</h3>
+                <p class="txt-para">I can tell you things about numbers and you might very well understand them maybe.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 wow fadeInRight delay-01s">
+              <div class="icon">
+                <i class="fa fa-book"></i>
+              </div>
+              <div class="icon-text">
+                <h3 class="txt-tl">I Read Books A Lot</h3>
+                <p class="txt-para">I read a lot so I can know things to do my job better. I am not a scientist or anything but I admit I learn pretty fast.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 wow fadeInRight delay-01s">
+              <div class="icon">
+                <i class="fa fa-lightbulb-o"></i>
+              </div>
+              <div class="icon-text">
+                <h3 class="txt-tl">Sometimes Good Ideas</h3>
+                <p class="txt-para">These good ideas make your company have good numbers, which you'll know because I explain graph numbers pretty good.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 wow fadeInRight delay-01s">
+              <div class="icon">
+                <i class="fa fa-sign-language"></i>
+              </div>
+              <div class="icon-text">
+                <h3 class="txt-tl">Jazz Hands</h3>
+                <p class="txt-para">Ah cha cha cha.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!---->
+    <section class="section-padding parallax bg-image-2 section wow fadeIn delay-01s" id="cta-2">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <div class="cta-txt">
+              <h3>The trees. They whisper softly with the wind.</h3>
+              <p>Through the rustling, you hear only one phrase: <em>"hire me"</em></p>
+            </div>
+          </div>
+          <div class="col-md-4 text-center">
+            <a href="#contact" class="btn btn-submit">Contact</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!---->
+    <!---->
+    <!-- <section class="section-padding wow fadeInUp delay-02s" id="portfolio">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 col-sm-12">
+            <div class="section-title">
+              <h2 class="head-title">Portfolio</h2>
+              <hr class="botm-line">
+              <p class="sec-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
+            </div>
+          </div>
+          <div class="col-md-9 col-sm-12">
+            <div class="col-md-4 col-sm-6 padding-right-zero">
+              <div class="portfolio-box design">
+                <img src="img/port01.jpg" alt="" class="img-responsive">
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 padding-right-zero">
+              <div class="portfolio-box design">
+                <img src="img/port02.jpg" alt="" class="img-responsive">
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 padding-right-zero">
+              <div class="portfolio-box design">
+                <img src="img/port03.jpg" alt="" class="img-responsive">
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 padding-right-zero">
+              <div class="portfolio-box design">
+                <img src="img/port04.jpg" alt="" class="img-responsive">
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 padding-right-zero">
+              <div class="portfolio-box design">
+                <img src="img/port05.jpg" alt="" class="img-responsive">
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 padding-right-zero">
+              <div class="portfolio-box design">
+                <img src="img/port06.jpg" alt="" class="img-responsive">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
+    <!---->
+    <!---->
+    <section class="section-padding wow fadeInUp delay-01s" id="contact">
+      <div class="container">
+        <div class="row white">
+          <div class="col-md-8 col-sm-12">
+            <div class="section-title">
+              <h2 class="head-title black">How to Reach Me</h2>
+              <hr class="botm-line">
+              <p class="sec-para black">Message me on LinkedIn or shoot me an email. You know you want to.</p>
+            </div>
+          </div>
+          <!-- <div class="col-md-12 col-sm-12">
+            <div class="col-md-4 col-sm-6" style="padding-left:0px;">
+              <h3 class="cont-title">Email Us</h3>
+              <div id="sendmessage">Your message has been sent. Thank you!</div>
+              <div id="errormessage"></div>
+              <div class="contact-info">
+                <form action="" method="post" role="form" class="contactForm">
+                  <div class="form-group">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars"/>
+                    <div class="validation"></div>
+                  </div>
+                  <div class="form-group">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email"/>
+                    <div class="validation"></div>
+                  </div>
 
-  <div class="jumbotron">
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject"/>
+                    <div class="validation"></div>
+                  </div>
 
+                  <div class="form-group">
+                    <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                    <div class="validation"></div>
+                  </div>
+                  <button type="submit" class="btn btn-send">Send</button>
+                </form>
+              </div>
 
-    <div class="container" id="div01">
-      <img src="img/torch8bit01.gif" id="torchleft">
-      <h1>Welcome to Sean's Cool Code Dungeon</h1>
-      <img src="img/torch8bit01.gif" id="torchright"><br>
-      <img src="img/rotatingskull01.gif" id="rsleft" alt="">
-      <h2>Feel free to browse my site</h2>
-      <img src="img/rotatingskull01.gif" id="rsright" alt="">
-    </div>
+            </div> -->
+            <div class="col-md-4 col-sm-6">
+              <h3 class="cont-title">Contact Info</h3>
+              <div class="location-info">
 
-  </div>
+                <p class="white">
+                  <span aria-hidden="true" class="fa fa-list-alt"></span><a class="link-dec" href="https://www.linkedin.com/in/seanphillips760">LinkedIn</a></p>
+                <p class="white">
+                  <span aria-hidden="true" class="fa fa-envelope"></span>
+                  <a href="mailto:seanphillips760@gmail.com" class="link-dec">Email</a>
+                </p>
+              </div>
+            </div>
+            <!-- <div class="col-md-4">
+              <div class="contact-icon-container hidden-md hidden-sm hidden-xs">
+                <span aria-hidden="true" class="fa fa-envelope-o"></span> -->
+              </div>
+            </div>
+          <!-- </div> -->
+    </section>
+    <!---->
+    <!---->
+<section class="wow fadeInUp delay-01s">
+    <footer class="" id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-7 footer-copyright">
+            © Stackoverflow, Mostly - All rights reserved
+            <div class="credits">
+              Designed by
+              <a href="https://google.com/">Things I Copy-Pasted From the Internet</a>
+            </div>
+          </div>
+          <div class="col-sm-5 footer-social">
+            <div class="pull-right hidden-xs hidden-sm">
+              <!-- <a href="#">
+                <i class="fa fa-facebook"></i>
+              </a> -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </section>
 
+    <!-- <div class="jumbotron">
 
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="http://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+      <div class="container" id="div01">
+        <img src="../img/torch8bit01.gif" id="torchleft">
+        <h1>Welcome to Sean's Code Dungeon</h1>
+        <img src="../img/torch8bit01.gif" id="torchright"><br>
+        <img src="../img/rotatingskull01.gif" id="rsleft" alt="">
+        <h2>Feel free to browse my site</h2>
+        <img src="../img/rotatingskull01.gif" id="rsright" alt="">
+      </div>
 
-</body>
+    </div> -->
+    <!--/ header-->
+    <!---->
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/jquery.easing.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/wow.js"></script>
+    <script src="../js/custom.js"></script>
+    <script src="../contactform/contactform.js"></script>
+  </body>
 
 </html>
