--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sean's Code Dungeon</title>
+    <title>Welcome to Outer Space</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Latest compiled and minified CSS -->
     <link a href="https://fonts.googleapis.com/css?family=Lato:400,700,300|Open+Sans:400,600,700,300" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/animate.css">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" href="../css/master.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body id="stars01">
     <!--header-->
@@ -17,21 +18,22 @@
       <div class="bg-color">
         <!--nav-->
         <nav class="nav navbar-default navbar-fixed-top">
-          <div class="container">
-            <div class="col-md-12">
+          <div class="container fluid">
+            <div class="col-xs-12">
               <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynavbar" aria-expanded="false" aria-controls="navbar">
+                <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynavbar" aria-expanded="false" aria-controls="navbar">
                   <span class="fa fa-bars"></span>
-                </button>
-                <a href="index.html" class="navbar-brand">hello</a>
+                </button> -->
+                <!-- <a href="index.html" class="navbar-brand">HELLO AND</a> -->
               </div>
-              <div class="collapse navbar-collapse navbar-right" id="mynavbar">
+              <div class="col-xs-12" id="mynavbar">
+              <!-- <div class="collapse navbar-collapse" id="mynavbar"> -->
                 <ul class="nav navbar-nav">
                   <li class="active">
-                    <a href="#header">Top of Page</a>
+                    <a href="#header">Top</a>
                   </li>
                   <li>
-                    <a href="#feature">Why Hire Me</a>
+                    <a href="#whyhireme">Why Hire Me</a>
                   </li>
                   <li>
                     <a href="#contact">Contact</a>
@@ -51,8 +53,8 @@
           </div>
         </div>
       </div>
-    </header>
-    <section id="feature" class="section-padding">
+
+    <section id="whyhireme" class="section-padding">
       <div class="container">
         <div class="row">
           <div class="col-md-3 wow fadeInLeft delay-01s">
@@ -69,7 +71,7 @@
               </div>
               <div class="icon-text">
                 <h3 class="txt-tl">I'll Grow Graph Numbers</h3>
-                <p class="txt-para">The good ones will get bigger and the bad ones will get smaller. Neat!
+                <p class="">The good ones will get bigger and the bad ones will get smaller. Neat!
                 </p>
               </div>
             </div>
@@ -79,7 +81,7 @@
               </div>
               <div class="icon-text">
                 <h3 class="txt-tl">People Tell Me I'm Friendly</h3>
-                <p class="txt-para">I don't know much about sports but it doesn't stop me from nodding my head while smiling. Goooo baseketball!
+                <p class="">I don't know much about sports but it doesn't stop me from nodding my head while smiling. Goooo baseketball!
                 </p>
               </div>
             </div>
@@ -89,7 +91,7 @@
               </div>
               <div class="icon-text">
                 <h3 class="txt-tl">I Explain Pretty Good</h3>
-                <p class="txt-para">I can tell you things about numbers and you might very well understand them maybe.
+                <p class="">I can tell you things about numbers and you might very well understand them maybe.
                 </p>
               </div>
             </div>
@@ -99,7 +101,7 @@
               </div>
               <div class="icon-text">
                 <h3 class="txt-tl">I Read Books A Lot</h3>
-                <p class="txt-para">I read a lot so I can know things to do my job better. I am not a scientist or anything but I admit I learn pretty fast.
+                <p class="">I read a lot so I can know things to do my job better. I am not a scientist or anything but I admit I learn pretty fast.
                 </p>
               </div>
             </div>
@@ -109,7 +111,7 @@
               </div>
               <div class="icon-text">
                 <h3 class="txt-tl">Sometimes Good Ideas</h3>
-                <p class="txt-para">These good ideas make your company have good numbers, which you'll know because I explain graph numbers pretty good.
+                <p class="">These good ideas make your company have good numbers, which you'll know because I explain graph numbers pretty good.
                 </p>
               </div>
             </div>
@@ -119,7 +121,7 @@
               </div>
               <div class="icon-text">
                 <h3 class="txt-tl">Jazz Hands</h3>
-                <p class="txt-para">Ah cha cha cha.
+                <p class="">Ah cha cha cha.
                 </p>
               </div>
             </div>
@@ -134,7 +136,9 @@
           <div class="col-md-8">
             <div class="cta-txt">
               <h3>The trees. They whisper softly with the wind.</h3>
-              <p>Through the rustling, you hear only one phrase: <em>"hire me"</em></p>
+              <p>Through the rustling, you hear only one phrase:
+                <em>"hire me"</em>
+              </p>
             </div>
           </div>
           <div class="col-md-4 text-center">
@@ -232,49 +236,51 @@
               </div>
 
             </div> -->
-            <div class="col-md-4 col-sm-6">
-              <h3 class="cont-title">Contact Info</h3>
-              <div class="location-info">
+          <div class="col-md-4 col-sm-6">
+            <h3 class="cont-title">Contact Info</h3>
+            <div class="location-info">
 
-                <p class="white">
-                  <span aria-hidden="true" class="fa fa-list-alt"></span><a class="link-dec" href="https://www.linkedin.com/in/seanphillips760">LinkedIn</a></p>
-                <p class="white">
-                  <span aria-hidden="true" class="fa fa-envelope"></span>
-                  <a href="mailto:seanphillips760@gmail.com" class="link-dec">Email</a>
-                </p>
-              </div>
+              <p class="white">
+                <span aria-hidden="true" class="fa fa-list-alt"></span>
+                <a class="link-dec" href="https://www.linkedin.com/in/seanphillips760">LinkedIn</a>
+              </p>
+              <p class="white">
+                <span aria-hidden="true" class="fa fa-envelope"></span>
+                <a href="mailto:seanphillips760@gmail.com" class="link-dec">Email</a>
+              </p>
             </div>
-            <!-- <div class="col-md-4">
+          </div>
+          <!-- <div class="col-md-4">
               <div class="contact-icon-container hidden-md hidden-sm hidden-xs">
                 <span aria-hidden="true" class="fa fa-envelope-o"></span> -->
-              </div>
-            </div>
-          <!-- </div> -->
+        </div>
+      </div>
+      <!-- </div> -->
     </section>
     <!---->
     <!---->
-<section class="wow fadeInUp delay-01s">
-    <footer class="" id="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-7 footer-copyright">
-            © Stackoverflow, Mostly - All rights reserved
-            <div class="credits">
-              Designed by
-              <a href="https://google.com/">Things I Copy-Pasted From the Internet</a>
+    <section class="wow fadeInUp delay-01s">
+      <footer class="" id="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-7 footer-copyright">
+              © Stackoverflow, Mostly - All rights reserved
+              <div class="credits">
+                Designed by
+                <a href="https://google.com/">Things I Copy-Pasted From the Internet</a>
+              </div>
             </div>
-          </div>
-          <div class="col-sm-5 footer-social">
-            <div class="pull-right hidden-xs hidden-sm">
-              <!-- <a href="#">
+            <div class="col-sm-5 footer-social">
+              <div class="pull-right hidden-xs hidden-sm">
+                <!-- <a href="#">
                 <i class="fa fa-facebook"></i>
               </a> -->
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </footer>
-  </section>
+      </footer>
+    </section>
 
     <!-- <div class="jumbotron">
 
@@ -292,12 +298,12 @@
     <!---->
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/jquery.easing.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/wow.js"></script>
-    <script src="../js/custom.js"></script>
-    <script src="../contactform/contactform.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/wow.js"></script>
+    <script src="js/custom.js"></script>
+    <script src="contactform/contactform.js"></script>
   </body>
 
 </html>
