--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
         </div>
       </div>
-
+</header>
     <section id="whyhireme" class="section-padding">
       <div class="container">
         <div class="row">
@@ -206,36 +206,6 @@
               <p class="sec-para black">Message me on LinkedIn or shoot me an email. You know you want to.</p>
             </div>
           </div>
-          <!-- <div class="col-md-12 col-sm-12">
-            <div class="col-md-4 col-sm-6" style="padding-left:0px;">
-              <h3 class="cont-title">Email Us</h3>
-              <div id="sendmessage">Your message has been sent. Thank you!</div>
-              <div id="errormessage"></div>
-              <div class="contact-info">
-                <form action="" method="post" role="form" class="contactForm">
-                  <div class="form-group">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars"/>
-                    <div class="validation"></div>
-                  </div>
-                  <div class="form-group">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email"/>
-                    <div class="validation"></div>
-                  </div>
-
-                  <div class="form-group">
-                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject"/>
-                    <div class="validation"></div>
-                  </div>
-
-                  <div class="form-group">
-                    <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                    <div class="validation"></div>
-                  </div>
-                  <button type="submit" class="btn btn-send">Send</button>
-                </form>
-              </div>
-
-            </div> -->
           <div class="col-md-4 col-sm-6">
             <h3 class="cont-title">Contact Info</h3>
             <div class="location-info">
@@ -250,9 +220,6 @@
               </p>
             </div>
           </div>
-          <!-- <div class="col-md-4">
-              <div class="contact-icon-container hidden-md hidden-sm hidden-xs">
-                <span aria-hidden="true" class="fa fa-envelope-o"></span> -->
         </div>
       </div>
       <!-- </div> -->
@@ -281,23 +248,6 @@
         </div>
       </footer>
     </section>
-
-    <!-- <div class="jumbotron">
-
-      <div class="container" id="div01">
-        <img src="../img/torch8bit01.gif" id="torchleft">
-        <h1>Welcome to Sean's Code Dungeon</h1>
-        <img src="../img/torch8bit01.gif" id="torchright"><br>
-        <img src="../img/rotatingskull01.gif" id="rsleft" alt="">
-        <h2>Feel free to browse my site</h2>
-        <img src="../img/rotatingskull01.gif" id="rsright" alt="">
-      </div>
-
-    </div> -->
-    <!--/ header-->
-    <!---->
-
-    <!-- Latest compiled and minified JavaScript -->
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
