--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
+    <link rel="stylesheet" type="text/css" href="css/animations.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="css/master.css">
   </head>
@@ -20,14 +21,8 @@
         <nav class="nav navbar-default navbar-fixed-top">
           <div class="container fluid">
             <div class="col-xs-12">
-              <div class="navbar-header">
-                <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynavbar" aria-expanded="false" aria-controls="navbar">
-                  <span class="fa fa-bars"></span>
-                </button> -->
-                <!-- <a href="index.html" class="navbar-brand">HELLO AND</a> -->
-              </div>
+              <div class="navbar-header"></div>
               <div class="col-xs-12" id="mynavbar">
-              <!-- <div class="collapse navbar-collapse" id="mynavbar"> -->
                 <ul class="nav navbar-nav">
                   <li class="active">
                     <a href="#header">Top</a>
@@ -49,19 +44,19 @@
             <h2 class="top-title">welcome to</h2>
             <h3 class="title">sean's website</h3>
             <h4 class="sub-title">you deserve better. i'm sorry.</h4>
-            <a href="#contact" class="btn btn-submit">Contact Somebody Else</a>
+            <a href="#contact" class="animated hinge btn btn-submit">Contact Somebody Else</a>
           </div>
         </div>
       </div>
-</header>
+    </header>
     <section id="whyhireme" class="section-padding">
       <div class="container">
         <div class="row">
           <div class="col-md-3 wow fadeInLeft delay-01s">
             <div class="section-title">
-              <h2 class="head-title">Why hire me?</h2>
-              <hr class="botm-line">
-              <p class="sec-para">If you turn your eyeballs to the right, these fancy texts will explain.</p>
+              <h2 class="head-title animated fadeInLeft">Why hire me?</h2>
+              <hr class="botm-line animated fadeInLeft">
+              <p class="sec-para animated fadeInLeft">If you turn your eyeballs to the right, these fancy texts will explain.</p>
             </div>
           </div>
           <div class="col-md-9">
@@ -115,7 +110,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 wow fadeInRight delay-01s">
+            <!-- <div class="col-md-6 wow fadeInRight delay-01s">
               <div class="icon">
                 <i class="fa fa-sign-language"></i>
               </div>
@@ -124,7 +119,7 @@
                 <p class="">Ah cha cha cha.
                 </p>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -147,55 +142,105 @@
         </div>
       </div>
     </section>
-    <!---->
-    <!---->
-    <!-- <section class="section-padding wow fadeInUp delay-02s" id="portfolio">
+    <section id="resume" class="section-padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-3 col-sm-12">
+          <div class="col-md-3 ">
             <div class="section-title">
-              <h2 class="head-title">Portfolio</h2>
+              <h2 class="head-title">Work Experience</h2>
               <hr class="botm-line">
-              <p class="sec-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
+              <p class="sec-para">Experience in business insight research, analysis, and presentation with track record of success</p>
             </div>
           </div>
-          <div class="col-md-9 col-sm-12">
-            <div class="col-md-4 col-sm-6 padding-right-zero">
-              <div class="portfolio-box design">
-                <img src="img/port01.jpg" alt="" class="img-responsive">
+          <div class="col-md-12">
+            <div class="col-md-6 wow fadeInRight delay-01s">
+              <div class="icon">
+                <i class="fa fa-line-chart"></i>
+              </div>
+              <div class="icon-text">
+                <h3 class="txt-tl">Marketing Associate</h3>
+                <p class="">
+                  <em>Credit Sesame - Feb 2017 - Jul 2017</em>
+                </p>
               </div>
             </div>
-            <div class="col-md-4 col-sm-6 padding-right-zero">
-              <div class="portfolio-box design">
-                <img src="img/port02.jpg" alt="" class="img-responsive">
+            <div class="col-md-6 wow fadeInRight delay-01s">
+              <div class="icon">
+                <i class="fa fa-car"></i>
+              </div>
+              <div class="icon-text">
+                <h3 class="txt-tl">Operations</h3>
+                <p class="">
+                  <em>WorkCar - Sep 2015 - Dec 2016</em>
+                </p>
               </div>
             </div>
-            <div class="col-md-4 col-sm-6 padding-right-zero">
-              <div class="portfolio-box design">
-                <img src="img/port03.jpg" alt="" class="img-responsive">
+            <div class="col-md-6 wow fadeInRight delay-01s">
+              <div class="icon">
+                <i class="fa fa-pie-chart"></i>
+              </div>
+              <div class="icon-text">
+                <h3 class="txt-tl">Social Media Marketing Analyst</h3>
+                <p class="">
+                  <em>Riverine - Feb 2014 - Aug 2015</em>
+                </p>
               </div>
             </div>
-            <div class="col-md-4 col-sm-6 padding-right-zero">
-              <div class="portfolio-box design">
-                <img src="img/port04.jpg" alt="" class="img-responsive">
+            <div class="col-md-6 wow fadeInRight delay-01s">
+              <div class="icon">
+                <i class="fa fa-book"></i>
               </div>
-            </div>
-            <div class="col-md-4 col-sm-6 padding-right-zero">
-              <div class="portfolio-box design">
-                <img src="img/port05.jpg" alt="" class="img-responsive">
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-6 padding-right-zero">
-              <div class="portfolio-box design">
-                <img src="img/port06.jpg" alt="" class="img-responsive">
+              <div class="icon-text">
+                <h3 class="txt-tl">Market Research Analyst</h3>
+                <p class="">
+                  <em>Sound Medical Systems - Sep 2013 - Feb 2014</em>
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section> -->
-    <!---->
-    <!---->
+    </section>
+    <section class="section-padding bg-image-2 parallax section wow fadeIn delay-01s" id="cta-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <div class="cta-txt">
+              <h3>The trees. They whisper softly with the wind.</h3>
+              <p>Through the rustling, you hear only one phrase:
+                <em>"hire me"</em>
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4 text-center">
+            <a href="#contact" class="btn btn-submit">Contact</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- <section id="resume" class="section-padding"> <div class="container"> <div class="row"> <div class="col-md-3 "> <div class="section-title"> <h2 class="head-title">Skills and Qualifications</h2> <hr class="botm-line"> <p class="sec-para"></p>
+      </div> </div> <div class="col-md-12"> <div class="col-md-6 wow fadeInRight delay-01s"> <div class="icon"> <i class="fa fa-line-chart"></i> </div> <div class="icon-text"> <h3 class="txt-tl">Marketing Associate</h3> <p class=""> <em>Credit Sesame - Feb
+      2017 - Jul 2017</em> </p> </div> </div> <div class="col-md-6 wow fadeInRight delay-01s"> <div class="icon"> <i class="fa fa-car"></i> </div> <div class="icon-text"> <h3 class="txt-tl">Operations</h3> <p class=""> <em>WorkCar - Sep 2015 - Dec
+      2016</em> </p> </div> </div> <div class="col-md-6 wow fadeInRight delay-01s"> <div class="icon"> <i class="fa fa-pie-chart"></i> </div> <div class="icon-text"> <h3 class="txt-tl">Social Media Marketing Analyst</h3> <p class=""> <em>Riverine - Feb
+      2014 - Aug 2015</em> </p> </div> </div> <div class="col-md-6 wow fadeInRight delay-01s"> <div class="icon"> <i class="fa fa-book"></i> </div> <div class="icon-text"> <h3 class="txt-tl">Market Research Analyst</h3> <p class=""> <em>Sound Medical
+      Systems - Sep 2013 - Feb 2014</em> </p> </div> </div> </div> </div> </div> </section> -->
+    <section class="section-padding parallax bg-image-2 section wow fadeIn delay-01s" id="cta-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <div class="cta-txt">
+              <h3>The trees. They whisper softly with the wind.</h3>
+              <p>Through the rustling, you hear only one phrase:
+                <em>"hire me"</em>
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4 text-center">
+            <a href="#contact" class="btn btn-submit">Contact</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="section-padding wow fadeInUp delay-01s" id="contact">
       <div class="container">
         <div class="row white">
@@ -253,7 +298,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/wow.js"></script>
     <script src="js/custom.js"></script>
-    <script src="contactform/contactform.js"></script>
+    <script src="js/css3-animate-it.js"></script>
   </body>
 
 </html>
