--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2 class="top-title">welcome to</h2>
             <h3 class="title">sean's website</h3>
             <h4 class="sub-title">you deserve better. i'm sorry.</h4>
-            <a href="#contact" class="animated hinge btn btn-submit">Contact Somebody Else</a>
+            <a href="#contact" class="btn btn-submit">Contact Somebody Else</a>
           </div>
         </div>
       </div>
@@ -206,8 +206,8 @@
         <div class="row">
           <div class="col-md-8">
             <div class="cta-txt">
-              <h3>The trees. They whisper softly with the wind.</h3>
-              <p>Through the rustling, you hear only one phrase:
+              <h3>The fog lifts at sunrise. Upon the horizon: A unicorn.</h3>
+              <p>Its mane is glorious. On hind legs, still gazing upon you with equal awe, it projects into your mind:
                 <em>"hire me"</em>
               </p>
             </div>
@@ -218,13 +218,66 @@
         </div>
       </div>
     </section>
-    <!-- <section id="resume" class="section-padding"> <div class="container"> <div class="row"> <div class="col-md-3 "> <div class="section-title"> <h2 class="head-title">Skills and Qualifications</h2> <hr class="botm-line"> <p class="sec-para"></p>
-      </div> </div> <div class="col-md-12"> <div class="col-md-6 wow fadeInRight delay-01s"> <div class="icon"> <i class="fa fa-line-chart"></i> </div> <div class="icon-text"> <h3 class="txt-tl">Marketing Associate</h3> <p class=""> <em>Credit Sesame - Feb
-      2017 - Jul 2017</em> </p> </div> </div> <div class="col-md-6 wow fadeInRight delay-01s"> <div class="icon"> <i class="fa fa-car"></i> </div> <div class="icon-text"> <h3 class="txt-tl">Operations</h3> <p class=""> <em>WorkCar - Sep 2015 - Dec
-      2016</em> </p> </div> </div> <div class="col-md-6 wow fadeInRight delay-01s"> <div class="icon"> <i class="fa fa-pie-chart"></i> </div> <div class="icon-text"> <h3 class="txt-tl">Social Media Marketing Analyst</h3> <p class=""> <em>Riverine - Feb
-      2014 - Aug 2015</em> </p> </div> </div> <div class="col-md-6 wow fadeInRight delay-01s"> <div class="icon"> <i class="fa fa-book"></i> </div> <div class="icon-text"> <h3 class="txt-tl">Market Research Analyst</h3> <p class=""> <em>Sound Medical
-      Systems - Sep 2013 - Feb 2014</em> </p> </div> </div> </div> </div> </div> </section> -->
-    <section class="section-padding parallax bg-image-2 section wow fadeIn delay-01s" id="cta-4">
+  <!-- <section id="resume2" class="section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 ">
+        <div class="section-title">
+          <h2 class="head-title">Skills and Qualifications</h2>
+          <hr class="botm-line">
+          <p class="sec-para"></p>
+        </div>
+      </div>
+      <div class="col-md-12">
+        <div class="col-md-6 wow fadeInRight delay-01s">
+          <div class="icon">
+            <i class="fa fa-line-chart"></i>
+          </div>
+          <div class="icon-text">
+            <h3 class="txt-tl">Marketing Associate</h3>
+            <p class="">
+              <em>Credit Sesame - Feb 2017 - Jul 2017</em>
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6 wow fadeInRight delay-01s">
+          <div class="icon">
+            <i class="fa fa-car"></i>
+          </div>
+          <div class="icon-text">
+            <h3 class="txt-tl">Operations</h3>
+            <p class="">
+              <em>WorkCar - Sep 2015 - Dec 2016</em>
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6 wow fadeInRight delay-01s">
+          <div class="icon">
+            <i class="fa fa-pie-chart"></i>
+          </div>
+          <div class="icon-text">
+            <h3 class="txt-tl">Social Media Marketing Analyst</h3>
+            <p class="">
+              <em>Riverine - Feb 2014 - Aug 2015</em>
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6 wow fadeInRight delay-01s">
+          <div class="icon">
+            <i class="fa fa-book"></i>
+          </div>
+          <div class="icon-text">
+            <h3 class="txt-tl">Market Research Analyst</h3>
+            <p class="">
+              <em>Sound Medical Systems - Sep 2013 - Feb 2014</em>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section> -->
+    <!-- <section class="section-padding parallax bg-image-2 section wow fadeIn delay-01s" id="cta-4">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
@@ -240,7 +293,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <section class="section-padding wow fadeInUp delay-01s" id="contact">
       <div class="container">
         <div class="row white">
