--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Welcome to Outer Space</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Latest compiled and minified CSS -->
     <link a href="https://fonts.googleapis.com/css?family=Lato:400,700,300|Open+Sans:400,600,700,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -13,8 +13,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="css/master.css">
   </head>
-  <body id="stars01">
+  <body>
     <!--header-->
+<section class="bg-image-2">
     <header class="main-header" id="header">
       <div class="bg-color">
         <!--nav-->
@@ -49,18 +50,19 @@
         </div>
       </div>
     </header>
+  </section>
     <section id="whyhireme" class="section-padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-3 wow fadeInLeft delay-01s">
+          <div class="col-md-3 wow fadeIn delay-01s">
             <div class="section-title">
-              <h2 class="head-title animated fadeInLeft">Why hire me?</h2>
-              <hr class="botm-line animated fadeInLeft">
-              <p class="sec-para animated fadeInLeft">If you turn your eyeballs to the right, these fancy texts will explain.</p>
+              <h2 class="head-title animated fadeIn">Why hire me?</h2>
+              <hr class="botm-line animated fadeIn">
+              <p class="sec-para animated fadeIn">If you turn your eyeballs to the right, these fancy texts will explain.</p>
             </div>
           </div>
           <div class="col-md-9">
-            <div class="col-md-6 wow fadeInRight delay-01s">
+            <div class="col-md-6 wow fadeIn delay-01s">
               <div class="icon">
                 <i class="fa fa-line-chart"></i>
               </div>
@@ -70,7 +72,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 wow fadeInRight delay-01s">
+            <div class="col-md-6 wow fadeIn delay-01s">
               <div class="icon">
                 <i class="fa fa-users"></i>
               </div>
@@ -80,7 +82,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 wow fadeInRight delay-01s">
+            <div class="col-md-6 wow fadeIn delay-01s">
               <div class="icon">
                 <i class="fa fa-pie-chart"></i>
               </div>
@@ -90,7 +92,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 wow fadeInRight delay-01s">
+            <div class="col-md-6 wow fadeIn delay-01s">
               <div class="icon">
                 <i class="fa fa-book"></i>
               </div>
@@ -100,7 +102,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 wow fadeInRight delay-01s">
+            <div class="col-md-6 wow fadeIn delay-01s">
               <div class="icon">
                 <i class="fa fa-lightbulb-o"></i>
               </div>
@@ -110,7 +112,7 @@
                 </p>
               </div>
             </div>
-            <!-- <div class="col-md-6 wow fadeInRight delay-01s">
+            <!-- <div class="col-md-6 wow fadeIn delay-01s">
               <div class="icon">
                 <i class="fa fa-sign-language"></i>
               </div>
@@ -153,7 +155,7 @@
             </div>
           </div>
           <div class="col-md-12">
-            <div class="col-md-6 wow fadeInRight delay-01s">
+            <div class="col-md-6 wow fadeIn delay-01s">
               <div class="icon">
                 <i class="fa fa-line-chart"></i>
               </div>
@@ -164,7 +166,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 wow fadeInRight delay-01s">
+            <div class="col-md-6 wow fadeIn delay-01s">
               <div class="icon">
                 <i class="fa fa-car"></i>
               </div>
@@ -175,7 +177,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 wow fadeInRight delay-01s">
+            <div class="col-md-6 wow fadeIn delay-01s">
               <div class="icon">
                 <i class="fa fa-pie-chart"></i>
               </div>
@@ -186,7 +188,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 wow fadeInRight delay-01s">
+            <div class="col-md-6 wow fadeIn delay-01s">
               <div class="icon">
                 <i class="fa fa-book"></i>
               </div>
@@ -229,7 +231,7 @@
         </div>
       </div>
       <div class="col-md-12">
-        <div class="col-md-6 wow fadeInRight delay-01s">
+        <div class="col-md-6 wow fadeIn delay-01s">
           <div class="icon">
             <i class="fa fa-line-chart"></i>
           </div>
@@ -240,7 +242,7 @@
             </p>
           </div>
         </div>
-        <div class="col-md-6 wow fadeInRight delay-01s">
+        <div class="col-md-6 wow fadeIn delay-01s">
           <div class="icon">
             <i class="fa fa-car"></i>
           </div>
@@ -251,7 +253,7 @@
             </p>
           </div>
         </div>
-        <div class="col-md-6 wow fadeInRight delay-01s">
+        <div class="col-md-6 wow fadeIn delay-01s">
           <div class="icon">
             <i class="fa fa-pie-chart"></i>
           </div>
@@ -262,7 +264,7 @@
             </p>
           </div>
         </div>
-        <div class="col-md-6 wow fadeInRight delay-01s">
+        <div class="col-md-6 wow fadeIn delay-01s">
           <div class="icon">
             <i class="fa fa-book"></i>
           </div>
@@ -294,7 +296,7 @@
         </div>
       </div>
     </section> -->
-    <section class="section-padding wow fadeInUp delay-01s" id="contact">
+    <section class="section-padding wow fadeIn delay-01s" id="contact">
       <div class="container">
         <div class="row white">
           <div class="col-md-8 col-sm-12">
@@ -324,7 +326,7 @@
     </section>
     <!---->
     <!---->
-    <section class="wow fadeInUp delay-01s">
+    <section class="wow fadeIn delay-01s">
       <footer class="" id="footer">
         <div class="container">
           <div class="row">
