--- a/index.html
+++ b/index.html
@@ -10,47 +10,51 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="css/animations.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
-    <!--header-->
-<section class="bg-image-2">
-    <header class="main-header" id="header">
-      <div class="bg-color">
-        <!--nav-->
-        <nav class="nav navbar-default navbar-fixed-top">
-          <div class="container fluid">
-            <div class="col-xs-12">
-              <div class="navbar-header"></div>
-              <div class="col-xs-12" id="mynavbar">
-                <ul class="nav navbar-nav">
-                  <li class="active">
-                    <a href="#header">Top</a>
-                  </li>
-                  <li>
-                    <a href="#whyhireme">Why Hire Me</a>
-                  </li>
-                  <li>
-                    <a href="#contact">Contact</a>
-                  </li>
-                </ul>
+
+    <section class="bg-image-2">
+
+      <header class="main-header" id="header">
+        <!-- <video playsinline autoplay muted loop poster="" id="bgvid">
+            <source src="img/flowers.webm" type="video/webm">
+            <source src="img/flowers.mp4" type="video/mp4">
+        </video> -->
+        <div class="bg-color">
+          <!--nav-->
+          <nav class="nav navbar-default navbar-fixed-top">
+            <div class="container fluid">
+              <div class="col-xs-12">
+                <div class="navbar-header"></div>
+                <div class="col-xs-12" id="mynavbar">
+                  <ul class="nav navbar-nav">
+                    <li class="active">
+                      <a href="#header">Top</a>
+                    </li>
+                    <li>
+                      <a href="#whyhireme">Why Hire Me</a>
+                    </li>
+                    <li>
+                      <a href="#contact">Contact</a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
-          </div>
-        </nav>
-        <!--/ nav-->
-        <div class="container text-center">
-          <div class="wrapper wow fadeInUp delay-02s">
-            <h2 class="top-title">welcome to</h2>
-            <h3 class="title">sean's website</h3>
-            <h4 class="sub-title">you deserve better. i'm sorry.</h4>
-            <a href="#contact" class="btn btn-submit">Contact Somebody Else</a>
+          </nav>
+          <!--/ nav-->
+          <div class="container text-center">
+            <div class="wrapper wow fadeInUp delay-02s">
+              <!-- <h2 class="top-title">Profile Page</h2> -->
+              <h3 class="title">SEAN PHILLIPS</h3>
+              <h4 class="sub-title">Marketing Analytics</h4>
+              <a href="#contact" class="btn btn-submit">Contact</a>
+            </div>
           </div>
         </div>
-      </div>
-    </header>
-  </section>
+      </header>
+    </section>
     <section id="whyhireme" class="section-padding">
       <div class="container">
         <div class="row">
@@ -58,7 +62,7 @@
             <div class="section-title">
               <h2 class="head-title animated fadeIn">Why hire me?</h2>
               <hr class="botm-line animated fadeIn">
-              <p class="sec-para animated fadeIn">If you turn your eyeballs to the right, these fancy texts will explain.</p>
+              <p class="sec-para animated fadeIn">That's a great question.</p>
             </div>
           </div>
           <div class="col-md-9">
@@ -67,9 +71,10 @@
                 <i class="fa fa-line-chart"></i>
               </div>
               <div class="icon-text">
-                <h3 class="txt-tl">I'll Grow Graph Numbers</h3>
-                <p class="">The good ones will get bigger and the bad ones will get smaller. Neat!
-                </p>
+                <h3 class="txt-tl">Growth Mindset</h3>
+                <p class="">Return on Investment has many faces.</p>
+                <p class="">You'll always know what action to take both in the short and long run.</p>
+
               </div>
             </div>
             <div class="col-md-6 wow fadeIn delay-01s">
@@ -77,8 +82,10 @@
                 <i class="fa fa-users"></i>
               </div>
               <div class="icon-text">
-                <h3 class="txt-tl">People Tell Me I'm Friendly</h3>
-                <p class="">I don't know much about sports but it doesn't stop me from nodding my head while smiling. Goooo baseketball!
+                <h3 class="txt-tl">I'm Pretty Friendly</h3>
+                <p class="">I'm a team player. I collaborate. I give honest feedback.</p>
+                <p class="">
+                  Warmth and transparency are the backbone of any organization.
                 </p>
               </div>
             </div>
@@ -87,8 +94,12 @@
                 <i class="fa fa-pie-chart"></i>
               </div>
               <div class="icon-text">
-                <h3 class="txt-tl">I Explain Pretty Good</h3>
-                <p class="">I can tell you things about numbers and you might very well understand them maybe.
+                <h3 class="txt-tl">Numbers. Clarified.</h3>
+                <p class="">Clean data is good data. Clean, good looking data is
+                  <em>great</em>
+                  data.
+                </p>
+                <p class="">You'll always know what's going on when I give you information.
                 </p>
               </div>
             </div>
@@ -97,22 +108,14 @@
                 <i class="fa fa-book"></i>
               </div>
               <div class="icon-text">
-                <h3 class="txt-tl">I Read Books A Lot</h3>
-                <p class="">I read a lot so I can know things to do my job better. I am not a scientist or anything but I admit I learn pretty fast.
+                <h3 class="txt-tl">I Research. A Lot.</h3>
+                <p class="">Research is the lifeblood of data.</p>
+                <p class="">I keep on my toes so I can tackle your company's challenges that much faster.
                 </p>
               </div>
             </div>
-            <div class="col-md-6 wow fadeIn delay-01s">
-              <div class="icon">
-                <i class="fa fa-lightbulb-o"></i>
-              </div>
-              <div class="icon-text">
-                <h3 class="txt-tl">Sometimes Good Ideas</h3>
-                <p class="">These good ideas make your company have good numbers, which you'll know because I explain graph numbers pretty good.
-                </p>
-              </div>
-            </div>
-            <!-- <div class="col-md-6 wow fadeIn delay-01s">
+          </div>
+          <!-- <div class="col-md-6 wow fadeIn delay-01s">
               <div class="icon">
                 <i class="fa fa-sign-language"></i>
               </div>
@@ -122,7 +125,6 @@
                 </p>
               </div>
             </div> -->
-          </div>
         </div>
       </div>
     </section>
@@ -139,7 +141,7 @@
             </div>
           </div>
           <div class="col-md-4 text-center">
-            <a href="#contact" class="btn btn-submit">Contact</a>
+            <a href="#contact" class="btn btn-submit">It's Time</a>
           </div>
         </div>
       </div>
@@ -205,22 +207,30 @@
     </section>
     <section class="section-padding bg-image-2 parallax section wow fadeIn delay-01s" id="cta-3">
       <div class="container">
-        <div class="row">
-          <div class="col-md-8">
-            <div class="cta-txt">
-              <h3>The fog lifts at sunrise. Upon the horizon: A unicorn.</h3>
-              <p>Its mane is glorious. On hind legs, still gazing upon you with equal awe, it projects into your mind:
-                <em>"hire me"</em>
-              </p>
-            </div>
+        <div class="row row-centered">
+          <div class="col-xs-12 col-md-8 col-centered">
+            <center>
+              <div class="cta-txt">
+                <h3>The fog lifts at sunrise.</h3>
+                <h3>Upon the horizon: A unicorn.</h3>
+                <div class="col-xs-10 col-sm-8 col-md-8 col-centered">
+                  <center>
+                    <p>Its mane: glorious. On hind legs, gazing upon you with equal awe, it projects shimmering words into your mind:</p>
+                  </center>
+                </div>
+                <h3>
+                  <em>"hire me"</em>
+                </h3>
+              </div>
+            </center>
           </div>
-          <div class="col-md-4 text-center">
-            <a href="#contact" class="btn btn-submit">Contact</a>
-          </div>
+          <!-- <div class="col-md-4 text-center">
+            <a href="#contact" class="btn btn-submit">Heed the Call</a>
+          </div> -->
         </div>
       </div>
     </section>
-  <!-- <section id="resume2" class="section-padding">
+    <!-- <section id="resume2" class="section-padding">
   <div class="container">
     <div class="row">
       <div class="col-md-3 ">
@@ -322,10 +332,7 @@
           </div>
         </div>
       </div>
-      <!-- </div> -->
     </section>
-    <!---->
-    <!---->
     <section class="wow fadeIn delay-01s">
       <footer class="" id="footer">
         <div class="container">
@@ -354,6 +361,11 @@
     <script src="js/wow.js"></script>
     <script src="js/custom.js"></script>
     <script src="js/css3-animate-it.js"></script>
+    <!--[if lt IE 9]>
+    <script>
+    	document.createElement('video');
+    </script>
+    <![endif]-->
   </body>
 
 </html>
