--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
-    <section class="bg-image-2">
-      <header class="main-header" id="header">
+    <section class="">
+      <header class="bg-image-2 main-header" id="header">
         <!-- <video playsinline autoplay muted loop poster="" id="bgvid">
             <source src="img/flowers.webm" type="video/webm">
             <source src="img/flowers.mp4" type="video/mp4">
