--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
-    <section class="">
+    <section id="stars01">
       <header class="bg-image-2 main-header" id="header">
         <!-- <video playsinline autoplay muted loop poster="" id="bgvid">
             <source src="img/flowers.webm" type="video/webm">
