--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" type="text/css" href="css/animations.css">
     <link rel="stylesheet" href="css/master.css">
   </head>
-  <body>
-    <section id="stars01">
-      <header class="bg-image-2 main-header" id="header">
+  <body id="stars01">
+    <section>
+      <header class="main-header" id="header">
         <!-- <video playsinline autoplay muted loop poster="" id="bgvid">
             <source src="img/flowers.webm" type="video/webm">
             <source src="img/flowers.mp4" type="video/mp4">
