--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" type="text/css" href="css/animations.css">
     <link rel="stylesheet" href="css/master.css">
   </head>
-  <body id="stars01">
-    <section>
+  <body>
+    <section class="bg-image-2">
       <header class="main-header" id="header">
         <!-- <video playsinline autoplay muted loop poster="" id="bgvid">
             <source src="img/flowers.webm" type="video/webm">
